--- a/speedlib/build.gradle
+++ b/speedlib/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
