--- a/speedlib/build.gradle
+++ b/speedlib/build.gradle
@@ -23,4 +23,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.squareup.okhttp3:okhttp:3.3.1'
+    api project(':baselib')
 }
